--- a/Testing Images/Public Dataset/readme
+++ b/Testing Images/Public Dataset/readme
@@ -1,2 +1,2 @@
 This is a public dataset from Kaggle: https://www.kaggle.com/datasets/saratrajput/vehicle-rear-side-view-synthetic-data-set. As it is a dataset with more than 20000 images, we selected 5 random ones for our evaluation.
-We considered the instance segmentation images as the segmentation results and class segmentation images as the ground truth. The tested images we used are in this folder.
+We considered the instance segmentation images as the segmentation results and class segmentation images as the ground truth. The tested images we used and the results are in this folder.
